--- a/app/src/main/res/layout/activity_ueinicio.xml
+++ b/app/src/main/res/layout/activity_ueinicio.xml
@@ -22,6 +22,15 @@
         android:layout_marginTop="15dp"
         android:layout_below="@id/mapaUbicacionTransporte"
         android:layout_alignParentStart="true" />
+    
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/Registrar"
+        android:text="REGISTRAR"
+        android:layout_centerHorizontal="true"
+        android:textSize="20sp"
+        android:layout_below="@+id/listaTransportes" />
 
 
 </RelativeLayout>
