--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="colorBlanco">#ffffff</color>
+    <color name="colorBlancoHint">#c8d6d6d6</color>
     <color name="colorGris">#b7b7b7</color>
     <color name="colorGrisClaro">#9ed1f4</color>
     <color name="colorNegro">#000000</color>
