--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -75,6 +75,7 @@
             android:id="@+id/imagenTPerfil"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:layout_marginTop="30dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:src="@drawable/ic_perfil_defecto" />
@@ -83,6 +84,8 @@
             android:id="@+id/textoTNombre"
             android:layout_width="wrap_content"
             android:layout_height="45dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginLeft="10dp"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imagenTPerfil"
             android:drawableLeft="@drawable/ic_usuario"
@@ -100,6 +103,7 @@
             android:layout_width="wrap_content"
             android:layout_height="45dp"
             android:layout_marginTop="10dp"
+            android:layout_marginLeft="10dp"
             android:layout_below="@+id/textoTNombre"
             android:layout_toEndOf="@+id/imagenTPerfil"
             android:drawableLeft="@drawable/ic_telefono"
