--- a/app/src/main/res/layout/activity_ueinicio.xml
+++ b/app/src/main/res/layout/activity_ueinicio.xml
@@ -7,10 +7,22 @@
     android:background="@drawable/img_fondo"
     tools:context=".UE.UEInicio">
 
+    <TextView
+        android:id="@+id/textoInicioUE"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Mis Viajes"
+        android:textColor="@color/colorBlanco"
+        android:textSize="25dp"
+        android:textAlignment="center"
+        />
     <com.google.android.gms.maps.MapView
         android:id="@+id/mapaUbicacionTransporte"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_below="@+id/textoInicioUE"
+        android:layout_margin="15dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp" />
 
@@ -19,15 +31,19 @@
         android:id="@+id/listaTransportes"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="15dp"
         android:layout_marginTop="15dp"
         android:layout_below="@id/mapaUbicacionTransporte"
         android:layout_alignParentStart="true" />
     
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@drawable/bg_blanco_redondo"
         android:id="@+id/Registrar"
-        android:text="REGISTRAR"
+        android:layout_margin="15dp"
+        android:textAllCaps="false"
+        android:text="Nuevo viaje"
         android:layout_centerHorizontal="true"
         android:textSize="20sp"
         android:layout_below="@+id/listaTransportes" />
